--- a/cljs-data/workers/workers.html
+++ b/cljs-data/workers/workers.html
@@ -4,8 +4,8 @@
   <body>
     <h1>Hello WebWorkers</h1>
     <div id="log"></div>
-    <script src="target/cljs/cljs.js"></script>
-    <script src="target/cljs/page.js"></script>
+    <script src="/out/cljs.js"></script>
+    <script src="/out/page.js"></script>
     <script>page.start_workers(document.getElementById("log"));</script>
   </body>
 </html>
