--- a/cljs-data/dummy/dummy.html
+++ b/cljs-data/dummy/dummy.html
@@ -3,9 +3,9 @@
 <html>
   <body>
     <h1>hello world</h1>
-    <script src="target/cljs/cljs.js"></script>
-    <script src="target/cljs/basic.js"></script>
+    <script src="out/cljs.js"></script>
+    <script src="out/basic.js"></script>
     <script>basic.hello();</script>
-    <script src="target/cljs/other.js"></script>
+    <script src="out/other.js"></script>
   </body>
 </html>
